Handle empty commands